--- a/QRCodeScanner/app/src/main/AndroidManifest.xml
+++ b/QRCodeScanner/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     package="com.example.qrcodescanner">
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
